objects/SA_Audit__Helper__c.object
<CustomObject>
    <fields>
        <fullName>SA_Audit__FolderBody__c</fullName>
        <label>FolderBody</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Audit__JobId__c</fullName>
        <label>JobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Audit__ResultBody_10__c</fullName>
        <label>ResultBody_10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Audit__ResultBody_11__c</fullName>
        <label>ResultBody_11</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Audit__ResultBody_12__c</fullName>
        <label>ResultBody_12</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Helper</label>
    <listViews>
        <fullName>SA_Audit__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>H-{000000}</displayFormat>
        <label>Helper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>